<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Appearance"
        android:key="appearance" 
        >
        
        <ListPreference
            android:key="themes"
            android:title="@string/menu_settings_themes_title"
            android:summary="@string/menu_settings_themes_subtitle"
            android:entries="@array/themes" 
            android:entryValues="@array/themes_values"
            android:defaultValue="light"
            />
        
    </PreferenceCategory>
        
    <PreferenceCategory 
        android:title="Sharing"
        android:key="sharing">
        
        <CheckBoxPreference 
            android:key="lastfm"
            android:title="@string/menu_settings_lastfm_title"
            android:summary="@string/menu_settings_lastfm_subtitle"
            android:defaultValue="false"
        />
            
    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="Behavior"
        android:key="behavior" 
        >
        
        <CheckBoxPreference 
            android:key="repeat_list"
            android:title="@string/menu_settings_repeat_list_title"
            android:summary="@string/menu_settings_repeat_list_subtitle"
            android:defaultValue="false"
        />
        
    </PreferenceCategory>
    
</PreferenceScreen>
