<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kure.musicplayer.MainActivity" >
    
    <item
        android:id="@+id/action_bar_shuffle"
        android:icon="@drawable/rand"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/shuffle"
        />
    
    <item
        android:id="@+id/action_bar_end"
        android:icon="@drawable/end"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/end"
        />
    
    
    <!-- These items are shown on the context menu -->
    <item
        android:id="@+id/context_menu_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        />
    
    <item
        android:id="@+id/context_menu_now_playing"
        android:orderInCategory="100"
        android:title="@string/menu_main_now_playing"
        />
    
    <item
        android:id="@+id/context_menu_end"
        android:icon="@drawable/end"
        android:orderInCategory="100"
        android:title="@string/end"
        />

</menu>
